Fix: on some OSes text files are not getting opened (manjaro 22 xfce)